--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -1361,9 +1361,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "univ_project",
+   "display_name": "mos",
    "language": "python",
-   "name": "univ"
+   "name": "mos"
   },
   "language_info": {
    "codemirror_mode": {
