Add Visualization & Data Split

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -10,52 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "652ca884",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
     "from tqdm import tqdm\n",
     "from sklearn.model_selection import train_test_split\n",
     "import os\n",
     "from sklearn import metrics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f1ed8efb",
-   "metadata": {},
-   "source": [
-    "# Visualize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f2eef7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize = (8, 8))\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "# ax = fig.add_subplot(1, 1, 1)\n",
-    "ax.set_xlabel('Principal Component 1', fontsize = 15)\n",
-    "ax.set_ylabel('Principal Component 2', fontsize = 15)\n",
-    "ax.set_zlabel('Principal Component 3', fontsize = 15)\n",
-    "ax.set_title('3 component PCA', fontsize=20)\n",
-    "\n",
-    "targets = pdf['error'].unique()\n",
-    "for target in targets:\n",
-    "    indicesToKeep = (pdf['error'] == target)\n",
-    "    ax.scatter(pdf.loc[indicesToKeep, 'pca1']\n",
-    "               , pdf.loc[indicesToKeep, 'pca2']\n",
-    "               , pdf.loc[indicesToKeep, 'pca3']\n",
-    "               , s = 50)\n",
-    "ax.legend(targets)\n",
-    "ax.grid()"
    ]
   },
   {
