--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -132,7 +132,7 @@
     "model.add(Dense(16, activation=\"relu\"))\n",
     "model.add(Dense(1, activation=\"sigmoid\"))\n",
     "\n",
-    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
    ]
